CLOSED - task 166: use ure_gapi only if signed in http://github.com/bcfuchs/uredb_website/issues/issue/166

--- a/web-app/css/ure/main.css
+++ b/web-app/css/ure/main.css
@@ -1662,7 +1662,7 @@ a#extlink:link {
 }
 
 iframe[src^="https://apis.google.com"] {
-  display: none;
+//  display: none;
 }
 
 ._________________________ Media _________________________ {
